--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: pygments
 
 # https://help.github.com/articles/migrating-your-pages-site-from-maruku
-markdown: redcarpet
+markdown: kramdown
 
 paginate: 10 #pagination based on number of posts
 paginate_path: "page:num"
