--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ highlighter: pygments
 # https://help.github.com/articles/migrating-your-pages-site-from-maruku
 markdown: kramdown
 
+kramdown:
+    input: GFM
+
 paginate: 10 #pagination based on number of posts
 paginate_path: "page:num"
 
