--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Le journal de Christophe
 locale:           en_US
-url:              http://www.labouisse.com/
+url:              http://www.labouisse.com
 
 
 # Jekyll configuration
